Get status api uses account
