# docs/swagger.json
@@ -4954,6 +4954,9 @@
                 "security": [
                     {
                         "AppUserAuth": []
+                    },
+                    {
+                        "AppUserAccountAuth": []
                     }
                 ],
                 "description": "Gets the status for the current user for a specific app version",
@@ -4976,7 +4979,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.EStatus"
+                            "$ref": "#/definitions/Status"
                         }
                     },
                     "404": {
@@ -5216,6 +5219,9 @@
                 "security": [
                     {
                         "AppUserAuth": []
+                    },
+                    {
+                        "AppUserAccountAuth": []
                     }
                 ],
                 "description": "Gets the status for the current user",
@@ -5231,7 +5237,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.EStatus"
+                            "$ref": "#/definitions/Status"
                         }
                     },
                     "404": {
@@ -7091,32 +7097,6 @@
                     "type": "string"
                 },
                 "type": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.EStatus": {
-            "type": "object",
-            "properties": {
-                "app_version": {
-                    "type": "string"
-                },
-                "date": {
-                    "type": "string"
-                },
-                "date_updated": {
-                    "type": "string"
-                },
-                "encrypted_blob": {
-                    "type": "string"
-                },
-                "encrypted_key": {
-                    "type": "string"
-                },
-                "id": {
                     "type": "string"
                 },
                 "user_id": {
