# driver/web/adapter.go
@@ -109,10 +109,10 @@ func (we Adapter) Start() {
 	covid19RestSubrouter.HandleFunc("/ctests", we.userAccountsAuthWrapFunc(we.apisHandler.DeleteCTests)).Methods("DELETE")
 
 	//TODO use userAccountsAuthWrapFunc
-	covid19RestSubrouter.HandleFunc("/v2/statuses", we.userAuthWrapFunc(we.apisHandler.GetStatusV2Deprecated)).Methods("GET")
+	covid19RestSubrouter.HandleFunc("/v2/statuses", we.userAccountsAuthWrapFunc(we.apisHandler.GetStatusV2Deprecated)).Methods("GET")
 	covid19RestSubrouter.HandleFunc("/v2/statuses", we.userAccountsAuthWrapFunc(we.apisHandler.CreateOrUpdateStatusV2Deprecated)).Methods("PUT")
 	covid19RestSubrouter.HandleFunc("/v2/statuses", we.userAuthWrapFunc(we.apisHandler.DeleteStatusV2Deprecated)).Methods("DELETE")
-	covid19RestSubrouter.HandleFunc("/v2/app-version/{app-version}/statuses", we.userAuthWrapFunc(we.apisHandler.GetStatusV2)).Methods("GET")
+	covid19RestSubrouter.HandleFunc("/v2/app-version/{app-version}/statuses", we.userAccountsAuthWrapFunc(we.apisHandler.GetStatusV2)).Methods("GET")
 	covid19RestSubrouter.HandleFunc("/v2/app-version/{app-version}/statuses", we.userAccountsAuthWrapFunc(we.apisHandler.CreateOrUpdateStatusV2)).Methods("PUT")
 	covid19RestSubrouter.HandleFunc("/v2/app-version/{app-version}/statuses", we.userAuthWrapFunc(we.apisHandler.DeleteStatusV2)).Methods("DELETE")
 
